--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -23,7 +23,7 @@
 
 	@include desktop {
 		width: 30%;
-		margin: 20px;
+		margin: 10px;
 	}
 	border: 0px solid;
 	box-shadow: 4px 4px 8px $background-alt-4;
